crates/ars-components/src/input/slider/snapshots/ars_components__input__slider__tests__slider_range_start_ltr.snap
---
source: crates/ars-components/src/input/slider/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).range_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "range",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "slider",
            ),
        ),
    ],
    styles: [
        (
            Width,
            "25%",
        ),
        (
            Left,
            "0%",
        ),
    ],
}
