crates/ars-components/src/input/slider/snapshots/ars_components__input__slider__tests__slider_root_focused_dragging_disabled_invalid_snapshot.snap
---
source: crates/ars-components/src/input/slider/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-dragging",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-invalid",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-orientation",
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-readonly",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "slider",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "focused",
            ),
        ),
        (
            Dir,
            String(
                "ltr",
            ),
        ),
        (
            Id,
            String(
                "volume",
            ),
        ),
    ],
    styles: [],
}
