crates/ars-components/src/input/slider/snapshots/ars_components__input__slider__tests__slider_thumb_disabled_readonly_invalid_described.snap
---
source: crates/ars-components/src/input/slider/mod.rs
expression: "snapshot_attrs(&described.connect(&|_| {}).thumb_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "thumb",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "slider",
            ),
        ),
        (
            Data(
                "ars-thumb-alignment",
            ),
            String(
                "contain",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Value",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "volume-label",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Aria(
                ReadOnly,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "100",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "25",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "25",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "volume-description",
            ),
        ),
        (
            Class,
            String(
                "ars-touch-none",
            ),
        ),
        (
            Id,
            String(
                "volume-thumb",
            ),
        ),
        (
            Role,
            String(
                "slider",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [
        (
            Left,
            "25%",
        ),
    ],
}
