crates/ars-components/src/input/slider/snapshots/ars_components__input__slider__tests__slider_thumb_format_value_text.snap
---
source: crates/ars-components/src/input/slider/mod.rs
expression: "snapshot_attrs(&formatted.connect(&|_| {}).thumb_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "thumb",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "slider",
            ),
        ),
        (
            Data(
                "ars-thumb-alignment",
            ),
            String(
                "contain",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Value",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "volume-label",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "100",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "40",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "40 dB",
            ),
        ),
        (
            Class,
            String(
                "ars-touch-none",
            ),
        ),
        (
            Id,
            String(
                "volume-thumb",
            ),
        ),
        (
            Role,
            String(
                "slider",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [
        (
            Left,
            "40%",
        ),
    ],
}
